fix(dropdown): set z-index to above the modal (#2660)

--- a/packages/components/src/globals/scss/_layout.scss
+++ b/packages/components/src/globals/scss/_layout.scss
@@ -13,7 +13,7 @@
 $z-indexes: (
   modal: 9000,
   overlay: 8000,
-  dropdown: 7000,
+  dropdown: 9100,
   header: 6000,
   footer: 5000,
   hidden: - 1,
